build: IFS-1264: remove -XX:MaxPermSize=256m option from surefire argline